--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - |
       if [[ "$TEST_TYPE" == "pytest" ]]; then
         pip install -e .[testing]
+        pip install coveralls
       fi
 before_script:
     - (cd test/commonmark && ./spec.sh)
