--- a/test/test_renderers/test_json_renderer/test_basic.yml
+++ b/test/test_renderers/test_json_renderer/test_basic.yml
@@ -110,7 +110,8 @@ children:
   - 21
   - 21
   type: LinkDefinition
-- children:
+- arguments: ''
+  children:
   - content: 'code = 1
 
       '
@@ -129,8 +130,8 @@ children:
     type: RawText
   language: ''
   position:
-  - 27
-  - 28
+  - 26
+  - 29
   type: BlockCode
 - position:
   - 30
@@ -143,20 +144,20 @@ children:
       - content: '1'
         type: RawText
       position:
-      - 33
-      - 33
+      - 34
+      - 34
       type: TableCell
     - align: 1
       children:
       - content: '2'
         type: RawText
       position:
-      - 33
-      - 33
+      - 34
+      - 34
       type: TableCell
     position:
-    - 33
-    - 33
+    - 34
+    - 34
     row_align:
     - null
     - 1
@@ -171,26 +172,26 @@ children:
       - content: a
         type: RawText
       position:
-      - 31
-      - 31
+      - 32
+      - 32
       type: TableCell
     - align: 1
       children:
       - content: b
         type: RawText
       position:
-      - 31
-      - 31
+      - 32
+      - 32
       type: TableCell
     position:
-    - 31
-    - 31
+    - 32
+    - 32
     row_align:
     - null
     - 1
     type: TableRow
   position:
-  - 31
+  - 32
   - 34
   type: Table
 front_matter:
