--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
           name: Build docs to store
           command: |
             cd docs
-            make html
+            make html-strict
 
       - store_artifacts:
           path: docs/_build/html/
-          destination: html-strict
+          destination: html
 
 
 workflows:
