Add position to span tokens
This is a placeholder for actually implementing span level position recording in a later commit

--- a/test/test_block_token/test_atx_heading_heading_in_paragraph.yml
+++ b/test/test_block_token/test_atx_heading_heading_in_paragraph.yml
@@ -2,6 +2,7 @@
     children:
     - RawText:
         content: foo
+        position: null
     position:
     - 1
     - 1
@@ -9,6 +10,7 @@
     children:
     - RawText:
         content: heading
+        position: null
     level: 1
     position:
     - 2
@@ -17,6 +19,7 @@
     children:
     - RawText:
         content: bar
+        position: null
     position:
     - 3
     - 3
