--- a/test/test_block_token/test_doc_read_front_matter_ignore.yml
+++ b/test/test_block_token/test_doc_read_front_matter_ignore.yml
@@ -8,6 +8,7 @@ Document:
       children:
       - RawText:
           content: 'a: 1'
+          position: null
       level: 2
       position:
       - 2
