--- a/test/test_block_token/test_list_item_deep_list.yml
+++ b/test/test_block_token/test_list_item_deep_list.yml
@@ -6,6 +6,7 @@
             children:
             - RawText:
                 content: foo
+                position: null
             position:
             - 1
             - 1
@@ -17,6 +18,7 @@
                     children:
                     - RawText:
                         content: bar
+                        position: null
                     position:
                     - 2
                     - 2
@@ -28,6 +30,7 @@
                             children:
                             - RawText:
                                 content: baz
+                                position: null
                             position:
                             - 3
                             - 3
