--- a/test/test_block_token/test_paragraph_basic.yml
+++ b/test/test_block_token/test_paragraph_basic.yml
@@ -2,16 +2,21 @@
     children:
     - RawText:
         content: some
+        position: null
     - LineBreak:
         content: ''
+        position: null
         soft: true
     - RawText:
         content: continuous
+        position: null
     - LineBreak:
         content: ''
+        position: null
         soft: true
     - RawText:
         content: lines
+        position: null
     position:
     - 1
     - 3
