--- a/test/test_block_token/test_table_row_basic.yml
+++ b/test/test_block_token/test_table_row_basic.yml
@@ -5,6 +5,7 @@ TableRow:
       children:
       - RawText:
           content: cell 1
+          position: null
       position:
       - 0
       - 0
@@ -13,6 +14,7 @@ TableRow:
       children:
       - RawText:
           content: cell 2
+          position: null
       position:
       - 0
       - 0
