--- a/test/test_contrib/test_github_wiki/test_parse.yml
+++ b/test/test_contrib/test_github_wiki/test_parse.yml
@@ -1,7 +1,9 @@
 - RawText:
     content: 'text with '
+    position: null
 - GithubWiki:
     children:
     - RawText:
         content: wiki
+        position: null
     target: target
