--- a/test/test_renderers/test_json_renderer/test_link_references.yml
+++ b/test/test_renderers/test_json_renderer/test_link_references.yml
@@ -2,7 +2,9 @@ children:
 - children:
   - children:
     - content: bar
+      position: null
       type: RawText
+    position: null
     target: spam
     title: ''
     type: Link
