--- a/test/test_span_token/test_auto_link_basic.yml
+++ b/test/test_span_token/test_auto_link_basic.yml
@@ -2,5 +2,7 @@
     children:
     - RawText:
         content: ftp://foo.com
+        position: null
     mailto: false
+    position: null
     target: ftp://foo.com
