--- a/test/test_span_token/test_emphasis_multi.yml
+++ b/test/test_span_token/test_emphasis_multi.yml
@@ -2,9 +2,12 @@
     children:
     - RawText:
         content: one
+        position: null
 - RawText:
     content: ' '
+    position: null
 - Emphasis:
     children:
     - RawText:
         content: two
+        position: null
