--- a/test/test_span_token/test_link_basic.yml
+++ b/test/test_span_token/test_link_basic.yml
@@ -2,5 +2,7 @@
     children:
     - RawText:
         content: name 1
+        position: null
+    position: null
     target: target1
     title: ''
