--- a/test/test_span_token/test_math_span_dollar_in_code.yml
+++ b/test/test_span_token/test_math_span_dollar_in_code.yml
@@ -1,18 +1,26 @@
 - RawText:
     content: 'a '
+    position: null
 - InlineCode:
     children:
     - RawText:
         content: $
+        position: null
+    position: null
 - RawText:
     content: ' '
+    position: null
 - InlineCode:
     children:
     - RawText:
         content: $x=1$
+        position: null
+    position: null
 - RawText:
     content: ' renders '
+    position: null
 - Math:
     content: $x=1$
 - RawText:
     content: .
+    position: null
