--- a/test/test_span_token/test_math_span_escaped_opening.yml
+++ b/test/test_span_token/test_math_span_escaped_opening.yml
@@ -2,7 +2,10 @@
     children:
     - RawText:
         content: $
+        position: null
+    position: null
 - RawText:
     content: 'a '
+    position: null
 - Math:
     content: $b$
