--- a/test/test_span_token/test_nested_auto_link_plus_code.yml
+++ b/test/test_span_token/test_nested_auto_link_plus_code.yml
@@ -2,9 +2,14 @@
     children:
     - RawText:
         content: <
+        position: null
+    position: null
 - RawText:
     content: abc>  <abc
+    position: null
 - InlineCode:
     children:
     - RawText:
         content: '>'
+        position: null
+    position: null
