--- a/test/test_span_token/test_nested_emph_in_link.yml
+++ b/test/test_span_token/test_nested_emph_in_link.yml
@@ -4,5 +4,7 @@
         children:
         - RawText:
             content: some text
+            position: null
+    position: null
     target: link
     title: ''
