--- a/test/test_span_token/test_nested_strikethrough_plus_code.yml
+++ b/test/test_span_token/test_nested_strikethrough_plus_code.yml
@@ -2,15 +2,22 @@
     children:
     - RawText:
         content: ~~
+        position: null
+    position: null
 - RawText:
     content: 'abc '
+    position: null
 - Strikethrough:
     children:
     - RawText:
         content: abc
+        position: null
 - RawText:
     content: ' '
+    position: null
 - InlineCode:
     children:
     - RawText:
         content: ~~
+        position: null
+    position: null
