--- a/test/test_span_token/test_nested_strong_in_emph.yml
+++ b/test/test_span_token/test_nested_strong_in_emph.yml
@@ -2,9 +2,12 @@
     children:
     - RawText:
         content: 'with some '
+        position: null
     - Strong:
         children:
         - RawText:
             content: strong
+            position: null
     - RawText:
         content: ' text'
+        position: null
