--- a/test/test_block_token/test_list_item_before_block_code.yml
+++ b/test/test_block_token/test_list_item_before_block_code.yml
@@ -6,11 +6,14 @@
             children:
             - RawText:
                 content: foo
+                position: null
             - LineBreak:
                 content: ''
+                position: null
                 soft: true
             - RawText:
                 content: bar
+                position: null
             position:
             - 1
             - 2
@@ -20,6 +23,7 @@
                 content: 'baz
 
                   '
+                position: null
             language: ''
             position:
             - 3
