--- a/test/test_block_token/test_list_item_tight_list.yml
+++ b/test/test_block_token/test_list_item_tight_list.yml
@@ -6,6 +6,7 @@
             children:
             - RawText:
                 content: foo
+                position: null
             position:
             - 1
             - 1
@@ -25,6 +26,7 @@
     children:
     - RawText:
         content: bar
+        position: null
     level: 1
     position:
     - 3
