--- a/test/test_block_token/test_table_aligned.yml
+++ b/test/test_block_token/test_table_aligned.yml
@@ -7,6 +7,7 @@
             children:
             - RawText:
                 content: cell 1
+                position: null
             position:
             - 3
             - 3
@@ -15,6 +16,7 @@
             children:
             - RawText:
                 content: cell 2
+                position: null
             position:
             - 3
             - 3
@@ -35,6 +37,7 @@
             children:
             - RawText:
                 content: header 1
+                position: null
             position:
             - 1
             - 1
@@ -43,6 +46,7 @@
             children:
             - RawText:
                 content: header 2
+                position: null
             position:
             - 1
             - 1
