--- a/test/test_block_token/test_table_basic.yml
+++ b/test/test_block_token/test_table_basic.yml
@@ -7,6 +7,7 @@
             children:
             - RawText:
                 content: cell 1
+                position: null
             position:
             - 3
             - 3
@@ -15,6 +16,7 @@
             children:
             - RawText:
                 content: cell 2
+                position: null
             position:
             - 3
             - 3
@@ -23,6 +25,7 @@
             children:
             - RawText:
                 content: cell 3
+                position: null
             position:
             - 3
             - 3
@@ -40,6 +43,7 @@
             children:
             - RawText:
                 content: more 1
+                position: null
             position:
             - 4
             - 4
@@ -48,6 +52,7 @@
             children:
             - RawText:
                 content: more 2
+                position: null
             position:
             - 4
             - 4
@@ -56,6 +61,7 @@
             children:
             - RawText:
                 content: more 3
+                position: null
             position:
             - 4
             - 4
@@ -78,6 +84,7 @@
             children:
             - RawText:
                 content: header 1
+                position: null
             position:
             - 1
             - 1
@@ -86,6 +93,7 @@
             children:
             - RawText:
                 content: header 2
+                position: null
             position:
             - 1
             - 1
@@ -94,6 +102,7 @@
             children:
             - RawText:
                 content: header 3
+                position: null
             position:
             - 1
             - 1
