--- a/test/test_block_token/test_table_row_short.yml
+++ b/test/test_block_token/test_table_row_short.yml
@@ -5,6 +5,7 @@ TableRow:
       children:
       - RawText:
           content: cell 1
+          position: null
       position:
       - 0
       - 0
