--- a/test/test_span_token/test_nested_emph_in_strong.yml
+++ b/test/test_span_token/test_nested_emph_in_strong.yml
@@ -2,9 +2,12 @@
     children:
     - RawText:
         content: 'with some '
+        position: null
     - Emphasis:
         children:
         - RawText:
             content: emphasis
+            position: null
     - RawText:
         content: ' text'
+        position: null
