--- a/test/test_span_token/test_nested_link_in_emph.yml
+++ b/test/test_span_token/test_nested_link_in_emph.yml
@@ -6,5 +6,7 @@
             children:
             - RawText:
                 content: some text
+                position: null
+        position: null
         target: link
         title: ''
