--- a/test/test_span_token/test_foot_ref_span_after_text.yml
+++ b/test/test_span_token/test_foot_ref_span_after_text.yml
@@ -9,9 +9,16 @@
 - RawText:
     content: ' abc '
     position: null
-- FootReference:
+- PendingReference:
+    children:
+    - RawText:
+        content: ^a
+        position: null
+    is_image: false
     position: null
-    target: a
+    raw: '[^a]'
+    ref_type: shortcut
+    target: ^a
 - RawText:
     content: ' xyz'
     position: null
