--- a/test/test_span_token/test_foot_ref_span_basic.yml
+++ b/test/test_span_token/test_foot_ref_span_basic.yml
@@ -1,3 +1,10 @@
-- FootReference:
+- PendingReference:
+    children:
+    - RawText:
+        content: ^a
+        position: null
+    is_image: false
     position: null
-    target: a
+    raw: '[^a]'
+    ref_type: shortcut
+    target: ^a
