--- a/test/test_span_token/test_foot_ref_span_multiple.yml
+++ b/test/test_span_token/test_foot_ref_span_multiple.yml
@@ -1,9 +1,23 @@
-- FootReference:
+- PendingReference:
+    children:
+    - RawText:
+        content: ^a
+        position: null
+    is_image: false
     position: null
-    target: a
+    raw: '[^a]'
+    ref_type: shortcut
+    target: ^a
 - RawText:
     content: ' '
     position: null
-- FootReference:
+- PendingReference:
+    children:
+    - RawText:
+        content: ^a
+        position: null
+    is_image: false
     position: null
-    target: a
+    raw: '[^a]'
+    ref_type: shortcut
+    target: ^a
