--- a/test/test_span_token/test_foot_ref_span_not_image.yml
+++ b/test/test_span_token/test_foot_ref_span_not_image.yml
@@ -1,9 +1,13 @@
-- RawText:
-    content: '!'
+- PendingReference:
+    children:
+    - RawText:
+        content: ^a
+        position: null
+    is_image: true
     position: null
-- FootReference:
-    position: null
-    target: a
+    raw: '![^a]'
+    ref_type: shortcut
+    target: ^a
 - RawText:
     content: ' '
     position: null
